# micros-blog

./: README.md
comments/: Cargo.toml  Dockerfile
comments-nodejs/: index.js
comments/src/: main.rs  producer.rs
comments/src/api/: comments.rs
comments/src/models/: comment.rs
events/: Cargo.toml  Dockerfile
events/src/: main.rs
infrastructure/k8s/: comments-depl.yaml  event-bus-depl.yaml  ingress-srv.yaml  posts-depl.yaml  query-depl.yaml  query-mongo-depl.yaml  rabbitmq-depl.yaml
posts/: Cargo.toml  Dockerfile  Dockerfile.old
posts/src/: main.rs  producer.rs
posts/src/api/: posts.rs
posts/src/models/: post.rs
query/: Cargo.toml  Dockerfile
query/src/: consumer.rs  main.rs
query/src/api/: posts.rs
query/src/models/: blog.rs
