[package]
name = "query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
rand = "0.8.5"
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
lapin = "2.3.4"
tokio = { version = "1.37.0", features = ["full"] }
mongodb = "2.8.2"
futures = "0.3.30"
